--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -426,7 +426,7 @@
     <ClInclude Include="ored\marketdata\genericyieldvolcurve.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
-    <ClInclude Include="calendaradjustmentconfig.hpp">
+    <ClInclude Include="ored\utilities\calendaradjustmentconfig.hpp">
       <Filter>utilities</Filter>
     </ClInclude>
   </ItemGroup>
@@ -764,7 +764,7 @@
     <ClCompile Include="ored\marketdata\genericyieldvolcurve.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
-    <ClCompile Include="calendaradjustmentconfig.cpp">
+    <ClCompile Include="ored\utilities\calendaradjustmentconfig.cpp">
       <Filter>utilities</Filter>
     </ClCompile>
   </ItemGroup>
