--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -112,5 +112,8 @@
     <ClCompile Include="mxnircurves.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="calendaradjustment.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
