--- a/QuantExt/qle/cashflows/Makefile.am
+++ b/QuantExt/qle/cashflows/Makefile.am
@@ -19,6 +19,7 @@ libCashflows_la_SOURCES = \
 	quantocouponpricer.cpp \
 	equitycouponpricer.cpp \
 	equitycoupon.cpp \
+	strippedcapflooredyoyinflationcoupon.cpp \
 	lognormalcmsspreadpricer.cpp
 
 this_includedir=${includedir}/${subdir}
@@ -37,6 +38,7 @@ this_include_HEADERS =  \
 	quantocouponpricer.hpp \
 	equitycouponpricer.hpp \
 	equitycoupon.hpp \
+	strippedcapflooredyoyinflationcoupon.hpp \
 	lognormalcmsspreadpricer.hpp
 
 all.hpp: Makefile.am
