Update unit test for piecewise optionlet curve and add to Makefile

--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -29,6 +29,7 @@ interpolatedyoycapfloortermpricesurface.cpp
 logquote.cpp
 optionletstripper.cpp
 payment.cpp
+piecewiseoptionletcurve.cpp
 pricecurve.cpp
 pricetermstructureadapter.cpp
 qle_calendars.cpp
