--- a/QuantExt/test/Makefile.am
+++ b/QuantExt/test/Makefile.am
@@ -40,7 +40,8 @@ QLE_TESTS = \
 	cpicapfloor.cpp 
 	correlationtermstructure.cpp \
 	cpicapfloor.cpp \
-	strippedoptionletadapter.cpp
+	strippedoptionletadapter.cpp \
+	piecewiseoptionletcurve.cpp
 
 dist-hook:
 	mkdir -p $(distdir)/build
