--- a/QuantExt/test/Makefile.am
+++ b/QuantExt/test/Makefile.am
@@ -36,8 +36,10 @@ QLE_TESTS = \
 	crossccyfixfloatswaphelper.cpp \
 	crossccybasismtmresetswap.cpp \
 	crossccybasismtmresetswaphelper.cpp \
-    correlationtermstructure.cpp \
-	cpicapfloor.cpp
+	cpicapfloor.cpp 
+	correlationtermstructure.cpp \
+	cpicapfloor.cpp \
+	strippedoptionletadapter.cpp
 
 dist-hook:
 	mkdir -p $(distdir)/build
@@ -51,9 +53,9 @@ bin_PROGRAMS = quantext-test-suite
 quantext_test_suite_SOURCES = ${QLE_TESTS}
 quantext_test_suite_LDADD =
 quantext_test_suite_LDFLAGS = \
-    -lQuantLib \
-    -L../qle -lQuantExt \
-    -lboost_unit_test_framework
+	-lQuantLib \
+	-L../qle -lQuantExt \
+	-lboost_unit_test_framework
 
 TESTS = quantext-test-suite$(EXEEXT)
 TESTS_ENVIRONMENT = BOOST_TEST_LOG_LEVEL=message
