[touch: 721]Tests for piecewise optionlet stripper
This works but need to fix memory issues that only show up when run in
Debug mode. Will refactor to avoid these.

--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -30,6 +30,7 @@ logquote.cpp
 optionletstripper.cpp
 payment.cpp
 piecewiseoptionletcurve.cpp
+piecewiseoptionletstripper.cpp
 pricecurve.cpp
 pricetermstructureadapter.cpp
 qle_calendars.cpp
