--- a/QuantExt/test/testsuite.vcxproj
+++ b/QuantExt/test/testsuite.vcxproj
@@ -667,6 +667,7 @@
     <ClCompile Include="optionletstripper.cpp" />
     <ClCompile Include="payment.cpp" />
     <ClCompile Include="piecewiseoptionletcurve.cpp" />
+    <ClCompile Include="piecewiseoptionletstripper.cpp" />
     <ClCompile Include="pricecurve.cpp" />
     <ClCompile Include="pricetermstructureadapter.cpp" />
     <ClCompile Include="qle_calendars.cpp" />
