Fix stupid bug that cost me hours

--- a/OREData/ored/portfolio/Makefile.am
+++ b/OREData/ored/portfolio/Makefile.am
@@ -50,7 +50,7 @@ this_include_HEADERS = \
 	equityforward.hpp \
 	equityoption.hpp \
 	equityswap.hpp \
-	forwardbond.hpp
+	forwardbond.hpp \
 	fxforward.hpp \
 	fxoption.hpp \
 	fxswap.hpp \
