[touch: 721]Allow for addition of ATM curve
This may need to be improved as I believe it will fail on the edge cases
where the ATM strike is the same for two or more tenors. This is also
true of the OptionletStripper2 implementations in QuantLib and QuantExt
if I am not missing something.

--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -687,6 +687,9 @@
     <ClInclude Include="qle\termstructures\strippedoptionletadapter.hpp">
       <Filter>termstructures</Filter>
     </ClInclude>
+    <ClInclude Include="qle\termstructures\optionletstripperwithatm.hpp">
+      <Filter>termstructures</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="cashflows">
