Add unit test for equity forward stripper

--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClCompile Include="blackvariancesurfacesparse.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="equityforwardcurvestripper.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
