--- a/QuantExt/qle/termstructures/Makefile.am
+++ b/QuantExt/qle/termstructures/Makefile.am
@@ -22,6 +22,7 @@ libTermStructures_la_SOURCES = \
 	datedstrippedoptionlet.cpp \
 	datedstrippedoptionletadapter.cpp \
 	dynamicoptionletvolatilitystructure.cpp \
+	equityforwardcurvestripper.cpp \
 	optionletstripper.cpp \
 	optionletstripper1.cpp \
 	optionletstripper2.cpp \
@@ -59,6 +60,7 @@ this_include_HEADERS = \
 	crossccybasismtmresetswaphelper.hpp \
 	dynamicblackvoltermstructure.hpp \
 	dynamicswaptionvolmatrix.hpp \
+	equityforwardcurvestripper.hpp \
 	hazardspreadeddefaulttermstructure.hpp \
 	interpolateddiscountcurve.hpp \
 	interpolateddiscountcurve2.hpp \
@@ -76,6 +78,7 @@ this_include_HEADERS = \
 	optionletstripper.hpp \
 	optionletstripper1.hpp \
 	optionletstripper2.hpp \
+	optionpricesurface.hpp \
 	spreadedoptionletvolatility.hpp \
 	spreadedsmilesection.hpp \
 	spreadedswaptionvolatility.hpp \
